--- a/styles/styles1.css
+++ b/styles/styles1.css
@@ -19,7 +19,22 @@ Table of Contents:
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap');
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
+
+main {
+    width: 1000px;
+    margin: auto;
+}
+
+a {
+    color: #899CA0;
+}
+a:hover {
+    text-decoration: none;
+}
+/*(grijs #899CA0 en donkergroen #1C2B32)*/
 
 
 
@@ -28,6 +43,13 @@ Table of Contents:
 ////////////////////////*/
 body {
     font-family: 'Poppins', sans-serif;
+}
+h1 {
+    font-size: 60px;
+    margin: 0;
+}
+p {
+    font-size: x-small;
 }
 
 
@@ -38,24 +60,167 @@ body {
 
 
 /*///////////// 3.1 Header /////////////*/
+header {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 .head-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url("../assets/images/mountains.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
     width: 1000px;
-    margin: 80px auto;
-    color: forestgreen;
-    background-color: blue;
+    padding: 100px 100px 200px;
+    /*background-color: blue;*/
+}
+
+.first-button {
+    border: 2px solid #1C2B32;
+    border-bottom-left-radius: 50px;
+    border-top-left-radius: 50px;
+    padding: 15px 30px 15px 15px;
+    margin-top: 20px;
+    margin-right: -5px;
+    background-color: transparent;
+    font-size: x-small;
+    margin-bottom: 100px;
+}
+.second-button {
+    border: 2px solid #1C2B32;
+    border-bottom-right-radius: 50px;
+    border-top-right-radius: 50px;
+    padding: 15px;
+    background-color: #1C2B32;
+    color: white;
+    font-size: x-small;
 }
 
 
 /*///////////// 3.2 Testimonial /////////////*/
+.container-outer{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-right: 20px;
 
+}
+.container-inner {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px 80px 40px 80px;
+    margin: 20px 150px 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .5);
+    border-radius: 10px;
+}
+
+.container-inner-para{
+margin-bottom: 20px;
+}
+
+.quotes {
+    position: absolute;
+    width: 20px;
+    left: 50px;
+    top: 33px;
+}
+.profile-pic {
+    width: 25px;
+    position: absolute;
+    left: 230px;
+    bottom: 33px;
+}
+.person {
+    font-style: italic;
+}
+
+h2 {
+    font-size: smaller;
+}
 
 
 /*///////////// 3.3 Support /////////////*/
+.support {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 1000px;
+}
+.support-content {
+    align-items: center;
+    justify-content: center;
+}
+.call-pic {
+    margin-top: 20px;
+    width: 680px;
+    border-radius: 10px;
+}
+.support p {
+    margin-top: 10px;
+}
+
+.support-but {
+    background-color: #1C2B32;
+    padding: 15px 20px 15px 20px;
+    border-radius: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: white;
+    font-size: 10px;
+}
 
 
 
 /*///////////// 3.4 Faq /////////////*/
 
+.faq {
+    width: 1000px;
+    max-width: 1000px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.faq h2 {
+    padding-left: 165px;
+    margin: 10px;
+}
+.collapse{
+    display: flex;
+    align-items: flex-start;
+}
+
+details {
+    padding-left: 160px;
+    padding-right: 160px;
+    cursor: crosshair;
+}
+details > summary {
+    border: none;
+    margin: 10px;
+}
+details  p {
+    border-radius: 20px;
+    background-color: #899CA0;
+    padding: 15px;
+    margin: 10px;
+    color: white;
+}
+
 
 
 /*///////////// 3.5 Footer /////////////*/
+
+footer {
+    margin-top: 10px;
+    padding: 30px;
+    background-color: #1C2B32;
+    color: white;
+}
